# wad

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml  wad
.wad/: .gitignore  compose.yml  config.yml
completions/: wad.bash
wad_mcp_server/: __init__.py  server.py  status.py  wad.py
