[project]
name = "wad-mcp-server"
version = "0.1.0"
description = "Local stdio MCP server exposing WAD (Worktree Agent Devcontainers) operations"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "WAD contributors" }]
dependencies = [
  "fastmcp>=2.14.0",
]

[project.scripts]
wad-mcp-server = "wad_mcp_server.server:main"

[tool.setuptools]
packages = ["wad_mcp_server"]
